[package]
name = "torsion-waves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.14"
itertools = "0.10"

[profile.dev.package."*"]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
